--- a/views/addBlog.ejs
+++ b/views/addBlog.ejs
@@ -8,33 +8,29 @@
 <%- include('./partials/navbar') %> 
 
 
-<div class="container mt-3">
+<div class="container">
+  <form action="/blog" method="POST" enctype="multipart/form-data" class="blog-form">
 
-    <form action="/blog" method="POST" enctype="multipart/form-data">
+      <div class="form-group">
+          <label for="coverImage" class="form-label">Cover Image</label>
+          <input type="file" class="form-input" id="coverImage" name="coverImageURL">
+      </div>
 
-        <div class="mb-3">
-            <label for="coverImage" class="form-label">Cover Image</label>
-            <input type="file" class="form-control" id="coverImage" aria-describedby="emailHelp" name="coverImageURL">
-          </div>
-
-        <div class="mb-3">
+      <div class="form-group">
           <label for="title" class="form-label">Title</label>
-          <input type="text" class="form-control" id="title" aria-describedby="emailHelp" name="title">
-        </div>
-        <div class="mb-3">
+          <input type="text" class="form-input" id="title" name="title">
+      </div>
+
+      <div class="form-group">
           <label for="body" class="form-label">Body</label>
-          <textarea class="form-control" placeholder="Body of your blog..." id="body" name="body"></textarea>
-        </div>
-        <div class="mb-3">
-         <button class="btn btn-primary">Submit</button>
-        </div>
-    </form>
+          <textarea class="form-textarea" placeholder="Body of your blog..." id="body" name="body"></textarea>
+      </div>
 
+      <div class="form-group">
+          <button class="form-button">Submit</button>
+      </div>
+  </form>
 </div>
-
-
-
-
 
 <%- include('./partials/scripts') %>  
 </body>
