--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,4 +4,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/addblog.css">
+    <link rel="stylesheet" href="/css/dashboard.css">
 
