Modify the dashboard page and also the view Blog page

--- a/views/addBlog.ejs
+++ b/views/addBlog.ejs
@@ -32,6 +32,7 @@
   </form>
 </div>
 
+<footer class="addBlogFooter"> &copy2025 Blogify. All right reserved.</footer>
 <%- include('./partials/scripts') %>  
 </body>
 </html>
