--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -25,6 +25,8 @@
       <% }) %>
     </div>
   </div>
+  
+<footer class="dashboardFooter"> &copy2025 Blogify. All right reserved.</footer>
 
     <%- include('./partials/scripts') %>
 </body>
