--- a/public/css/addblog.css
+++ b/public/css/addblog.css
@@ -1,11 +1,14 @@
 
+body{
+    background-color: #cbd1d8;
+}
 
 .container {
     max-width: 600px;
     margin: 50px auto;
     padding: 20px;
     background-color: white;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     border-radius: 8px;
 }
 
@@ -58,6 +61,9 @@
     background-color: #ffa500;
     transform: scale(1.05);
 }
+
+
+
 
 @media (max-width: 768px) {
     .container {
