--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -10,52 +10,40 @@
 
     <%- include('./partials/navbar') %>
 
-        <div class="container mt-4">
-            <h1>
-                <%= blog.title %>
-            </h1>
-            <img src="<%= blog.coverImageURL %>" alt="img" width="700px">
-            <pre class="mt-5"><%= blog.body %> </pre>
+        <div class="container">
+        <!-- Blog Title and Image -->
+        <h1><%= blog.title %></h1>
+        <img src="<%= blog.coverImageURL %>" alt="Blog Image">
+
+        <!-- Blog Content -->
+        <pre class="mt-5"><%= blog.body %></pre>
+
+        <!-- Blog Author -->
+        <div class="author">
+            <p>Author : </p>
+            <img src="<%= blog.createdBy.profileImageUrl %>" alt="Author">
+            <span><%= blog.createdBy.fullname %></span>
         </div>
 
-        <!-- ========== Displying the author of blog ===============  -->
-        <div class="container mt-4">
-            <img src="<%= blog.createdBy.profileImageUrl %>" width="50px">
-            <%= blog.createdBy.fullname %>
-        </div>
-
-        <!-- =================== Adding comment section ================ -->
-
-        <div class="container mt-5">
-            <h2>Comments (<%=comments.length%>) </h2>
+        <!-- Comments Section -->
+        <div class="comments-section">
+            <h2>Comments (<%= comments.length %>)</h2>
 
             <% if (locals.user) { %>
-                <form action="/blog/comment/<%= blog._id %>" method="POST">
-                    <div class="mb-3">
-                        <label for="comments" class="form-label">Add comments</label>
-                        <input type="text" name="content" class="form-control" id="comments"
-                            aria-describedby="emailHelp" placeholder="Enter your comment">
-                    </div>
-                    <button type="submit" class="btn btn-primary">Add</button>
-                </form>
+            <form action="/blog/comment/<%= blog._id %>" method="POST">
+                <input type="text" name="content" id="comments" placeholder="Enter your comment">
+                <button type="submit">Add</button>
+            </form>
             <% } %>
 
-          <!-- //============= Displaying the existing comment ============ -->
-          <div class="mt-5">
-
-            <% comments.forEach(comment=> { %>
-                <div>
-                    <img src="<%= comment.createdBy.profileImageUrl %>" width="50px">
-                    <%= comment.createdBy.fullname %> :
-                    <pre><%= comment.content %></pre>
-                </div>
-                <% }) %>
-
+            <% comments.forEach(comment => { %>
+            <div class="comment">
+                <img src="<%= comment.createdBy.profileImageUrl %>" alt="Commenter">
+                <pre id="commentUser"><strong><%= comment.createdBy.fullname %>:</strong> <%= comment.content %></pre>
+            </div>
+            <% }) %>
         </div>
-
-
-        </div>
-
+    </div>
 
         <%- include('./partials/scripts') %>
 </body>
