--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,4 +6,5 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/addblog.css">
     <link rel="stylesheet" href="/css/dashboard.css">
+    <link rel="stylesheet" href="/css/blog.css">
 
